datafusion/substrait/tests/cases/snapshots/substrait_integration__cases__consumer_integration__tests__test_select_count_from_select_1.snap
---
source: datafusion/substrait/tests/cases/consumer_integration.rs
expression: plan_str
---
Aggregate: groupBy=[[]], aggr=[[count(Int64(1)) AS count(*)]]
  Values: (Int64(0))
