datafusion/substrait/tests/cases/snapshots/substrait_integration__cases__consumer_integration__tests__tpch_test_04.snap
---
source: datafusion/substrait/tests/cases/consumer_integration.rs
expression: plan_str
---
Projection: ORDERS.O_ORDERPRIORITY, count(Int64(1)) AS ORDER_COUNT
  Sort: ORDERS.O_ORDERPRIORITY ASC NULLS LAST
    Aggregate: groupBy=[[ORDERS.O_ORDERPRIORITY]], aggr=[[count(Int64(1))]]
      Projection: ORDERS.O_ORDERPRIORITY
        Filter: ORDERS.O_ORDERDATE >= CAST(Utf8("1993-07-01") AS Date32) AND ORDERS.O_ORDERDATE < CAST(Utf8("1993-10-01") AS Date32) AND EXISTS (<subquery>)
          Subquery:
            Filter: LINEITEM.L_ORDERKEY = LINEITEM.L_ORDERKEY AND LINEITEM.L_COMMITDATE < LINEITEM.L_RECEIPTDATE
              TableScan: LINEITEM
          TableScan: ORDERS
